Fix blink of wallpaper seen on opening virtual keyboard

Bug: 805369
Test: Fix failed test and `git cl try`
Change-Id: If77f7d2502cb17891d82914928c031f62d4e5f94
Reviewed-on: https://chromium-review.googlesource.com/954163
Reviewed-by: Blake O'Hare <blakeo@chromium.org>
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544998}
Former-commit-id: 67fa126c4037aba9344d80523354c2c4c78ae460